--- a/2.typescript/tsconfig.json
+++ b/2.typescript/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "compilerOptions": {
-        "rootDirs": ["ts", "css"],
+        "rootDirs": ["ts"],
         "target"    : "ES6",
+        "module": "commonjs",
         "outDir"    : "mjs",
         "removeComments" : false,
         "watch"     : true
