--- a/2.typescript/tsconfig.json
+++ b/2.typescript/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "rootDirs": ["ts"],
         "target"    : "ES6",
-        "module": "commonjs",
+        // "module": "commonjs",
         "outDir"    : "mjs",
         "removeComments" : false,
         "watch"     : true
